@@ -77,6 +77,7 @@ http://sp.tas3.pt:8080/zxidservlet/appdemo
 
 gdb /apps/java/j2sdk1.4.2/bin/java core
 gdb /apps/java/j2sdk1.4.2/bin/java /d/sampo/apache-tomcat-5.5.20/core
+tcpdump -lnA -s 1024 dst port 8080
 
 ./zxcall -d -a http://idp.tas3.pt:8081/zxididp?o=B tastest:tastest -t urn:x-foobar -e '<foobar>Do It!</foobar>'
 
