@@ -7,8 +7,8 @@ ZXID Home - Open Source IdM - SAML SSO - Federated
 <<define: ibox300!align=right width=300 border=1 hspace=5 cellpadding=3 bgcolor="#550055">>
 <<define: ibox150!align=right width=150 border=1 hspace=5 cellpadding=3 bgcolor="#550055">>
 
-<<define: ZXVERS!0.53>>
-<<define: ZXNEWS!20100323 - Shibboleth metadata extentions, IdP fixes>>
+<<define: ZXVERS!0.58>>
+<<define: ZXNEWS!20100617 - Extensive new features, due TAS3>>
 
 <<maketitle: 1>>
 
@@ -38,7 +38,7 @@ ZXID Home - Open Source IdM - SAML SSO - Federated
 * *Net::SAML*: Perl module wrapping libzxid. Also zxidhlo.pl example, implementing
   SP in mod_perl environment, is supplied.
 
-* *zxididp*: Full featured Identity Provider and Discovery Service, as deployed by zxidp.org
+* *zxididp*: Full featured Identity Provider and Discovery Service, as deployed by <<link:http://zxidp.org/index-idp.html: zxidp.org>>.
 
 * *libzxid*: C library for SAML 2.0 federated Single Sign-On (SSO) and ID-WSF Web
   Services. Many other language bindings are supported through SWIG.
@@ -155,7 +155,7 @@ In this space we host links to IdPs that work with ZXID and to
 ZXID test sites you can use to get a feel for yourself. There is
 no guarantee that these sites stay up:
 
-* http://zxidp.org/
+* http://zxidp.org/index-idp.html
 * http://ssocircle.com/
 
 (*** http://cgi-service-provider.saml2.com/cgi-bin/zxid  -- An alias of ssocircle.com)
@@ -325,8 +325,8 @@ ZXID:
 <li>2010 (<a href="#" onClick="vis('old2010',1);">show</a>/<a href="#" onClick="vis('old2010',0);">hide</a>)
 <div id="old2010">
 >>
-
-* <<link:zxid-0.52.tgz>> (20100323 - Shibboleth metadata extentions, IdP fixes)
+* <<link:zxid-0.58.tgz>> (20100617 - Extensive new features, due to TAS3)
+* <<link:zxid-0.53.tgz>> (20100323 - Shibboleth metadata extentions, IdP fixes)
 * <<link:zxid-0.52.tgz>> (20100217 - Fixed multidiscovery, etc.)
 * <<link:zxid-0.50.tgz>> (20100211 - Fixed multibootstrap)
 * <<link:zxid-0.49.tgz>> (20100201 - Removed many arbitrary 64KB limits. Added zxcall tool.)
