@@ -1,1 +1,1 @@
-$Id: 0.58-3-g5b7b03a 20100609-083135 sampo@jin $
+$Id: 0.59 20100618-170438 sampo@jin $
